BTWCT-1225: Fixed mobile spacing for selector arrow

--- a/waters-aem-frontend/src/styles/footer.scss
+++ b/waters-aem-frontend/src/styles/footer.scss
@@ -423,7 +423,7 @@
 
             @include mobile {
                 position: absolute;
-                right: $space-xxs;
+                right: $space-s;
             }
         }
 
